Fixes #536